[new] changed drawable and moveable base class to use glm translation/rotation/scaling matrices instead of x/y coordinates

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,10 @@ set(CMAKE_CXX_STANDARD 17)
 add_executable(BouncyBall
         src/main.cpp
 
+        src/drawable.cpp
+        include/drawable.h
+        src/moveable.cpp
+        include/moveable.h
         src/shader.cpp
         include/shader.h
         )
