--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,8 @@ add_executable(BouncyBall
         src/base/drawable.cpp src/base/drawable.h
         src/base/moveable.cpp src/base/moveable.h
         src/animation/animation.cpp src/animation/animation.h
+        src/animation/animation_rot.cpp src/animation/animation_rot.h
+        src/animation/animation_bounce.cpp src/animation/animation_bounce.h
         src/ball/ball.cpp src/ball/ball.h
         #src/ball/enemy.cpp src/ball/enemy.h
         #src/ball/player.cpp src/ball/player.h
